--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babylonjs": "^3.3.0-beta.3",
     "cannon": "^0.6.2",
     "earcut": "^2.1.3",
+    "interactive-shader-format": "^2.9.0",
     "oimo": "^1.0.9",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
